--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>planIt API</title>
+  <title>TaskIt API</title>
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-  <h1>planIt</h1>
+  <h1>TaskIt</h1>
 </body>
 </html>
